--- a/消息队列/rabbitmq/data safety/1-Consumer Acknowledgements and Publisher Confirms.ipynb
+++ b/消息队列/rabbitmq/data safety/1-Consumer Acknowledgements and Publisher Confirms.ipynb
@@ -58,34 +58,68 @@
     "channel.basicReject(deliveryTag, true);\n",
     "```\n",
     "\n",
+    "RabbitMQ不会为未ack的消息设置超时时间，它判断此消息是否需要重新投递给消费者的唯一依据是消费该消息的消费者连接是否已经断开。这么设计的原因是RabbitMQ允许消费者消费一条消息的时间可以很久很久。\n",
+    "\n",
+    "RabbitMQ管理平台界面上可以看到当前队列中Ready状态和Unacknowledged状态的消息数，分别对应上文中的等待投递给消费者的消息数和已经投递给消费者但是未收到ack信号的消息数。也可以通过命令行来查看上述信息\n",
+    "\n",
+    "\n",
     "#### 四. Consumer prefetch (qos)  \n",
-    "`channel.basicQos(1)`: qos代表rabbitmq队列中unack的消息的最大条数, 不设置的话rabbitmq会把queue中的所有消息一股脑的发送给consumer, 造成内存溢出; 其次, 配置qos后也会让mq有机会把消息分发给不同的consumer\n",
+    "`channel.basicQos(1)`: qos代表rabbitmq队列中unack的消息的最大条数, 一旦达到这个值, mq暂时停止向 channel 发送数据; 不设置的话rabbitmq会把queue中的所有消息一股脑的发送给consumer, 造成内存溢出; 其次, 配置qos后也会让mq有机会把消息分发给不同的consumer\n",
     "\n",
     "\n",
     "\n",
     "#### 五. Producer Confirm\n",
     "\n",
-    "[异步producer confirm机制, 利用监听器实现](https://blog.csdn.net/u013256816/article/details/55515234)"
+    "[异步producer confirm机制, 利用监听器实现](https://blog.csdn.net/u013256816/article/details/55515234)   \n",
+    "\n",
+    "异步confirm模式的编程实现最复杂，Channel对象提供的ConfirmListener()回调方法只包含deliveryTag（当前Chanel发出的消息序号），我们需要自己为每一个Channel维护一个unconfirm的消息序号集合，每publish一条数据，集合中元素加1，每回调一次handleAck方法，unconfirm集合删掉相应的一条（multiple=false）或多条（multiple=true）记录。从程序运行效率上看，这个unconfirm集合最好采用有序集合SortedSet存储结构。实际上，SDK中的 `waitForConfirms()` 方法也是通过 SortedSet 维护消息序号的。\n",
+    "```java\n",
+    "SortedSet<Long> confirmSet = Collections.synchronizedSortedSet(new TreeSet<Long>());\n",
+    "channel.confirmSelect();\n",
+    "channel.addConfirmListener(new ConfirmListener() {\n",
+    "    public void handleAck(long deliveryTag, boolean multiple) throws IOException {\n",
+    "        if (multiple) {\n",
+    "            confirmSet.headSet(deliveryTag + 1).clear();\n",
+    "        } else {\n",
+    "            confirmSet.remove(deliveryTag);\n",
+    "        }\n",
+    "    }\n",
+    "    public void handleNack(long deliveryTag, boolean multiple) throws IOException {\n",
+    "        System.out.println(\"Nack, SeqNo: \" + deliveryTag + \", multiple: \" + multiple);\n",
+    "        if (multiple) {\n",
+    "            confirmSet.headSet(deliveryTag + 1).clear();\n",
+    "        } else {\n",
+    "            confirmSet.remove(deliveryTag);\n",
+    "        }\n",
+    "    }\n",
+    "});\n",
+    "\n",
+    "while (true) {\n",
+    "    long nextSeqNo = channel.getNextPublishSeqNo();\n",
+    "    channel.basicPublish(ConfirmConfig.exchangeName, ConfirmConfig.routingKey, MessageProperties.PERSISTENT_TEXT_PLAIN, ConfirmConfig.msg_10B.getBytes());\n",
+    "    confirmSet.add(nextSeqNo);\n",
+    "}\n",
+    "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
