--- a/设计模式/行为型/策略模式.ipynb
+++ b/设计模式/行为型/策略模式.ipynb
@@ -4,87 +4,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. 什么是策略模式\n",
-    "* 定义一个算法簇, 将每个算法封装起来, 让他们可以相互替换; 并让算法的变化独立于调用算法的一方. \n",
-    "* 策略模式: 将算法的定义, 创建, 使用三方解耦\n",
+    "**设计原则和设计思想, 远比设计模式普适和重要, 掌握设计原则和思想, 甚至可以自己创建出设计模式**\n",
     "\n",
-    "### 2. 解耦三方   \n",
-    "#### 1. 策略(算法)的定义    \n",
-    "   策略模式中, 强调的事一组算法可以相互替换. 因此, 策略是接口的一组实现   \n",
-    "   ```java\n",
-    "    //  策略. 算法的接口\n",
-    "\tpublic interface Strategy {\n",
-    "\t  void algorithmInterface();\n",
-    "\t}\n",
+    "策略模式是将策略的 `定义`, `创建`, `使用` 三部分解耦   \n",
     "\n",
-    "\tpublic class ConcreteStrategyA implements Strategy {\n",
-    "\t  @Override\n",
-    "\t  public void  algorithmInterface() {\n",
-    "\t    //具体的算法...\n",
-    "\t  }\n",
-    "\t}\n",
-    "\n",
-    "\tpublic class ConcreteStrategyB implements Strategy {\n",
-    "\t  @Override\n",
-    "\t  public void  algorithmInterface() {\n",
-    "\t    //具体的算法...\n",
-    "\t  }\n",
-    "\t}\n",
-    "   ```\n",
-    "#### 2. 策略的创建    \n",
-    "  所谓策略的创建, 就是根据不同情况, 选择不同算法(策略)进行调用. 可以使用工厂类创建算法(策略)对象. 这里需要注意的是, 策略分为有状态和无状态的   \n",
-    "  * 无状态类策略:   \n",
-    "   不包含成员变量, 只有纯粹的算法实现. 这种情况不需要每次调用新建算法对象, 可以预先创建好缓存在工厂类中   \n",
-    "  ```java\n",
-    "\tpublic class StrategyFactory {\n",
-    "\t  private static final Map<String, Strategy> strategies = new HashMap<>();\n",
-    "\n",
-    "\t  static {\n",
-    "\t    strategies.put(\"A\", new ConcreteStrategyA());\n",
-    "\t    strategies.put(\"B\", new ConcreteStrategyB());\n",
-    "\t  }\n",
-    "\n",
-    "\t  public static Strategy getStrategy(String type) {\n",
-    "\t    if (type == null || type.isEmpty()) {\n",
-    "\t      throw new IllegalArgumentException(\"type should not be empty.\");\n",
-    "\t    }\n",
-    "\t    return strategies.get(type);\n",
-    "\t  }\n",
-    "\t}\n",
-    "  ```\n",
-    "  * 有状态类策略:  \n",
-    "  \t* 什么是有状态的策略\n",
-    "\t   包含成员变量, 每次调用策略对象需要新建, 因此不能把策略对象需要在工厂模式的 get 方法中新建. (这里用 ConcreteStrategyA 和 ConcreteStrategyB 模拟)\n",
-    "\t  ```java\n",
-    "\t\tpublic class StrategyFactory {\n",
-    "\t\t  public static Strategy getStrategy(String type) {\n",
-    "\t\t    // 出现大量 if-else 判断代码. 而策略模式是可以消除这种大量判断代码的, 具体做法如下\n",
-    "\t\t    if (type == null || type.isEmpty()) {\n",
-    "\t\t      throw new IllegalArgumentException(\"type should not be empty.\");\n",
-    "\t\t    }\n",
-    "\n",
-    "\t\t    if (type.equals(\"A\")) {\n",
-    "\t\t      return new ConcreteStrategyA();\n",
-    "\t\t    } else if (type.equals(\"B\")) {\n",
-    "\t\t      return new ConcreteStrategyB();\n",
-    "\t\t    }\n",
-    "\n",
-    "\t\t    return null;\n",
-    "\t\t  }\n",
-    "\t\t}\n",
-    "\t  ``` \n",
-    "\n",
-    "\n",
-    "#### 3. 用 for 消除大量的 if-else 判断使用哪种策略的逻辑     \n",
-    "我们看到, 当策略对象不能简单的通过查表法从工厂类中获取时, 工厂类的 getStrategy() 就会出现大量的判断逻辑. 这种实现方式相当于把原来的 if-else 分支逻辑，从调用方转移到策略的创建方.       \n",
-    "比如, 有一个需求: 对文件排序. 但根据文件大小的不同, 会选择内存排序, 多线程的外排序, mapreduce 排序这3个不同算法. 策略的选取已经不是简单的类型判断了, 怎么避免 if-else 的出现呢 ?     \n",
-    "*  如下给出了解决办法: 将策略和满足策略调用的条件封装到一起, 用 for 循环判断哪个策略的调用成立, 然后获取策略对象\n",
-    "\n",
+    "#### 1. 策略的定义   \n",
     "```java\n",
+    "//  策略. 算法的接口\n",
+    "public interface Strategy {\n",
+    "  void algorithmInterface();\n",
+    "}\n",
+    "\n",
+    "public class ConcreteStrategyA implements Strategy {\n",
+    "  @Override\n",
+    "  public void  algorithmInterface() {\n",
+    "    //具体的算法...\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "public class ConcreteStrategyB implements Strategy {\n",
+    "  @Override\n",
+    "  public void  algorithmInterface() {\n",
+    "    //具体的算法...\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "#### 2. 策略的创建    \n",
+    "因为要根据不同情况创建不同策略, 为了封装策略的创建过程, 可以将这个过程抽到工厂类中, 让工厂类实例化策略对象 (这里又可以用到`工厂模式`). 而且,     \n",
+    "* 如果策略对象是无状态的, 就是说如果策略对象的构造方法有会变动参数 ,可以作为类似 spring siglton 的模式存在, 可以在工厂类中先创建好策略对象, 缓存到工厂的 hashmap 等待使用;   \n",
+    "* 如果策略对象是有状态的, 就是说策略对象的构造方法中没有会变动的参数, 可以作为类似 spring prototype 的模式存在, 则要在每次调用工厂类的 getStrategy() 方法中创建新的策略对象;      \n",
+    " \n",
+    "```java\n",
+    "// 工厂类实例化无状态类策略\n",
+    "public class StrategyFactory {\n",
+    "  private static final Map<String, Strategy> strategies = new HashMap<>();\n",
+    "\n",
+    "  static {\n",
+    "    strategies.put(\"A\", new ConcreteStrategyA());\n",
+    "    strategies.put(\"B\", new ConcreteStrategyB());\n",
+    "  }\n",
+    "\n",
+    "  public static Strategy getStrategy(String type) {\n",
+    "    if (type == null || type.isEmpty()) {\n",
+    "      throw new IllegalArgumentException(\"type should not be empty.\");\n",
+    "    }\n",
+    "    return strategies.get(type);\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// 工厂类实例化有状态类策略\n",
+    "public class StrategyFactory {\n",
+    "  public static Strategy getStrategy(String type) {\n",
+    "    // 出现大量 if-else 判断代码. 而策略模式是可以消除这种大量判断代码的, 具体做法如下\n",
+    "    if (type == null || type.isEmpty()) {\n",
+    "      throw new IllegalArgumentException(\"type should not be empty.\");\n",
+    "    }\n",
+    "\n",
+    "    if (type.equals(\"A\")) {\n",
+    "      return new ConcreteStrategyA();\n",
+    "    } else if (type.equals(\"B\")) {\n",
+    "      return new ConcreteStrategyB();\n",
+    "    }\n",
+    "\n",
+    "    return null;\n",
+    "  }\n",
+    "}\n",
+    "``` \n",
+    "#### 3. 策略的使用    \n",
+    "项目中, 经常有多层嵌套的 if-else 判断, 又说策略模式可以消除这种判断, 怎么做到的呢? 可以让策略的使用方, 先`将策略和策略的使用条件封装成一个对象`, `再放到一个 list 中缓存`这种办法, 调用策略时就能用 for 循环遍历筛选. 如下, 完整的实现了一个需求:     \n",
+    "* 对文件排序. 但根据文件大小的不同, 会选择内存排序, 多线程的外排序, mapreduce 排序这3个不同算法.算法根据文件大小进行筛选   \n",
+    "    \n",
+    "```java\n",
+    "// 策略接口\n",
     "interface ISortAlg {\n",
     "    void sort(String filePath);\n",
     "}\n",
-    "\n",
+    "// 策略实现类\n",
     "class QuickSort implements ISortAlg {\n",
     "    @Override\n",
     "    public void sort(String filePath) {\n",
@@ -113,6 +110,7 @@
     "    }\n",
     "}\n",
     "\n",
+    "// 策略工厂\n",
     "class SortAlgFactory {\n",
     "    private static final Map<String, ISortAlg> algs = new HashMap<>();\n",
     "\n",
@@ -131,6 +129,7 @@
     "    }\n",
     "}\n",
     "\n",
+    "// 策略调用方\n",
     "class Sorter {\n",
     "    private static final long GB = 1000 * 1000 * 1000;\n",
     "    private static final List<AlgRange> algs = new ArrayList<>();\n",
@@ -177,7 +176,12 @@
     "        }\n",
     "    }\n",
     "}\n",
-    "```"
+    "```\n",
+    "\n",
+    "#### 4. 注解策略的进阶   \n",
+    "现在唯一的问题是, 当新增策略时, 要修改策略工厂类. 这个问题可以通过`策略加上注解`, `策略工厂扫描解析注解`来解决    \n",
+    "(1) 定义注解 : 用自定义注解来标注有哪些策略类     \n",
+    "(2) 创建注解 : 策略工厂搜索被自定义注解的策略类, 通过反射记载策略类, 创建策略对象\n"
    ]
   }
  ],
