--- a/面试题总结/2021年.ipynb
+++ b/面试题总结/2021年.ipynb
@@ -40,6 +40,37 @@
     "5) hashTable 头插和尾插的区别       \n",
     "6) hashTable 的哈心算法在"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 阿里\n",
+    "1) 什么情况加需要打破双亲委派机制, 怎么打破\n",
+    "* 一面  \n",
+    "jVM自动内存管理，Minor GC与Full GC的触发机制\n",
+    "了解过JVM调优没，基本思路是什么\n",
+    "如何设计存储海量数据的存储系统\n",
+    "缓存的实现原理，设计缓存要注意\n",
+    "淘宝热门商品信息在JVM哪个内存区域\n",
+    "操作系统的页式存储\n",
+    "volatile关键字的如何保证内存可见性\n",
+    "happen-before原则\n",
+    "Lucene全文搜索的原理\n",
+    "\n",
+    "* 二面  \n",
+    "你说你熟悉并发编程，那么你说说Java锁有哪些种类，以及区别\n",
+    "如何保证内存可见性\n",
+    "Http请求的过程与原理\n",
+    "TCP连接的特点\n",
+    "TCP连接如何保证安全可靠的\n",
+    "为什么TCP连接需要三次握手，两次不可以吗，为什么\n",
+    "AOP的\n",
+    "动态代理与cglib实现的区别（这个，醉得很厉害）\n",
+    "那么你说说代理的实现原理呗\n",
+    "看过Spring源码没，说说Ioc容器的加载过程吧\n",
+    "了解过字节码的编译过程吗（这个还真不知道）"
+   ]
   }
  ],
  "metadata": {
