--- a/java-垃圾回收/深入理解Java虚拟机/7-虚拟机类加载机制.ipynb
+++ b/java-垃圾回收/深入理解Java虚拟机/7-虚拟机类加载机制.ipynb
@@ -4,6 +4,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 1. ClassLoader 的 parent 层级   \n",
+    "jvm 中的类都是由类加载器加载的， 类加载器本身也是一个对象，所以我们说的 ClassLoader 是一个可以加载类的`对象`。jvm 内置了三个进程内唯一的类加载器对象，此外用户也可以用 `new` 实例化自己的类加载器对象。jvm 自身维护了`内置的三个类加载器对象`和`自己实例化的类加载器对象`之间的 parent 层级关系，表现为:\n",
+    "* 由 C++ 实现的顶级 `BootStrap加载器`：   \n",
+    "  因为是 C++ 实现，如果打印这个类加载器对象，表示为 null。负责加载 `$JAVA_HOME/lib` 目录下的 jar 包中的 class  \n",
+    "* Java 实现的 `Extension 加载器`：    \n",
+    "  用 sun.misc.Launcher 的内部类 `ExtClassLoader` 表示,负责加载`$JAVA_HOME/lib/ext`目录下的jar包     \n",
+    "* Java 实现的 Application 加载器：   \n",
+    "  用 sun.misc.Launcher 的内部类 `AppClassLoader` 表示， 负责加载`$classpath`里的类。因为 `ClassLoader#getSystemClassLoader()` 方法返回的就是 AppClassLoader 对象，所以又叫系统类加载器\n",
+    "  \n",
+    "ClassLoader 对象的层级关系不是通过继承实现的，而是通过组合实现，用 `parent 属性`表示，如下代码验证了这种层级关系\n",
+    "```java\n",
+    "public static void testLoaderLevel(){\n",
+    "// MyClassLoader 是一个自定义类加载器，自定义方法后面介绍\n",
+    "    ClassLoader myLoader1 = new MyClassLoader();\n",
+    "    System.out.println(myLoader1); // MyClassLoader@548c4f57 \n",
+    "\n",
+    "    ClassLoader parent1 = myLoader1.getParent();\n",
+    "    System.out.println(parent1);   // sun.misc.Launcher$AppClassLoader@18b4aac2\n",
+    "\n",
+    "    ClassLoader parent2 = parent1.getParent();\n",
+    "    System.out.println(parent2);   // sun.misc.Launcher$ExtClassLoader@1218025c\n",
+    "\n",
+    "    ClassLoader parent3 = parent2.getParent();\n",
+    "    System.out.println(parent3);   // null\n",
+    "    \n",
+    "    System.out.println(ClassLoader.getSystemClassLoader() == parent1); // true (反映了三个内置类加载器的全局唯一)\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "#### 2. 类加载器的 parent 委派机制     \n",
+    "java 设计了类加载器对象的基类 `ClassLoader`，是上述 ext, app, 自定义类加载器的基类，该类中定义了类加载的双亲委派模式。  \n",
+    "首先，jvm 用一个类加载对象加载类时，以 `ClassLoader#loadClassInternal()` 方法为入口， 该方法只调用了 `ClassLoader#loadClass()` 方法，该方法是线程安全的。  \n",
+    "```java\n",
+    "// ClasLoader.java\n",
+    "\n",
+    "// This method is invoked by the virtual machine to load a class.\n",
+    "private Class<?> loadClassInternal(String name)\n",
+    "    throws ClassNotFoundException\n",
+    "{\n",
+    "    // For backward compatibility, explicitly lock on 'this' when\n",
+    "    // the current class loader is not parallel capable.\n",
+    "    if (parallelLockMap == null) {\n",
+    "        synchronized (this) {\n",
+    "             return loadClass(name);\n",
+    "        }\n",
+    "    } else {\n",
+    "        return loadClass(name);\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "接着，在 `ClassLoader#loadClass()` 方法中，实现了类加载器的双亲委派机制： 递归调用 parent 的 loadClass() 方法：   \n",
+    "* 先看用类加载对象，看该类名是否已经被加载  \n",
+    "* 如果未被加载，则递归调用 parent 类加载器加载，否则调用自身的 `findClass()` 进行加载。\n",
+    "\n",
+    "```java\n",
+    "// ClassLoader.java\n",
+    "\n",
+    "protected Class<?> loadClass(String name, boolean resolve)\n",
+    "        throws ClassNotFoundException\n",
+    "{\n",
+    "    synchronized (getClassLoadingLock(name)) {\n",
+    "        // First, check if the class has already been loaded\n",
+    "        Class<?> c = findLoadedClass(name);\n",
+    "        if (c == null) {\n",
+    "            long t0 = System.nanoTime();\n",
+    "            try {\n",
+    "                if (parent != null) {\n",
+    "                    c = parent.loadClass(name, false);\n",
+    "                } else {\n",
+    "                    c = findBootstrapClassOrNull(name);\n",
+    "                }\n",
+    "            } catch (ClassNotFoundException e) {\n",
+    "                // ClassNotFoundException thrown if class not found\n",
+    "                // from the non-null parent class loader\n",
+    "            }\n",
+    "\n",
+    "            if (c == null) {\n",
+    "                // If still not found, then invoke findClass in order\n",
+    "                // to find the class.\n",
+    "                long t1 = System.nanoTime();\n",
+    "                c = findClass(name);\n",
+    "\n",
+    "                // this is the defining class loader; record the stats\n",
+    "                sun.misc.PerfCounter.getParentDelegationTime().addTime(t1 - t0);\n",
+    "                sun.misc.PerfCounter.getFindClassTime().addElapsedTimeFrom(t1);\n",
+    "                sun.misc.PerfCounter.getFindClasses().increment();\n",
+    "            }\n",
+    "        }\n",
+    "        if (resolve) {\n",
+    "            resolveClass(c);\n",
+    "        }\n",
+    "        return c;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "protected Class<?> findClass(String name) throws ClassNotFoundException {\n",
+    "    throw new ClassNotFoundException(name);\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "这里就暴露了自定义类加载器的实现方法：  \n",
+    "* 首先，让自定义的类加载器类 `extends ClassLoader`\n",
+    "* 如果想保留双亲委派机制，只`覆盖 findClass()` 方法即可。   \n",
+    "  `protected final Class<?> defineClass(String name, byte[] b, int off, int len)` 方法将字节数组转换为 `Class<?>` 对象的方法，所以只需在 findClass 中获取字节数组，再调用 ClassLoader#defineClass() 方法即可。  \n",
+    "* 如果想打破双亲委派机制，就去覆盖`loadClass()`方法。\n",
+    "\n",
+    "如下，自定义类加载器的方法\n",
+    "\n",
+    "```java\n",
+    "class MyClassLoader extends ClassLoader{\n",
+    "    @Override\n",
+    "    public Class<?> loadClass(String name) throws ClassNotFoundException {\n",
+    "        if (\"ClassA\".equals(name)){\n",
+    "            try{\n",
+    "                InputStream is = getClass().getResourceAsStream(\"/ClassA.class\");\n",
+    "\n",
+    "                byte[] bytes = new byte[is.available()];\n",
+    "                is.read(bytes);\n",
+    "                return defineClass(name,bytes,0,bytes.length);\n",
+    "            }catch (IOException ignored){}\n",
+    "        }else {\n",
+    "            return super.loadClass(name);\n",
+    "        }\n",
+    "        return null;\n",
+    "    };\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "#### 3. 子类加载器可以访问 parent 类加载加载的类，parent 类加载器加载的类不能访问子类加载器加载的类  \n",
+    "[https://blog.csdn.net/qq_20846769/article/details/100026116?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162480761116780271595492%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&request_id=162480761116780271595492&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_v2~rank_v29-1-100026116.first_rank_v2_pc_rank_v29&utm_term=classloader%E4%B8%8E%E5%91%BD%E5%90%8D%E7%A9%BA%E9%97%B4&spm=1018.2226.3001.4187](https://blog.csdn.net/qq_20846769/article/details/100026116?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162480761116780271595492%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&request_id=162480761116780271595492&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_v2~rank_v29-1-100026116.first_rank_v2_pc_rank_v29&utm_term=classloader%E4%B8%8E%E5%91%BD%E5%90%8D%E7%A9%BA%E9%97%B4&spm=1018.2226.3001.4187)\n",
+    "\n",
+    "#### 4. Thread 类中的 contextClassLoader\n",
+    "```java\n",
+    "private ClassLoader contextClassLoader\n",
+    "```\n",
+    "\n",
+    "#### 6. jdbc4.0 以后使用 SPI 跳过 Class.forName\n",
+    "\n",
+    "#### 5. ServiceLoader 与 SPI\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 7. springboot 自动装配与 SPI\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 一. Java类加载步骤\n",
     "#### (1) Java加载.class文件后到类生成,消亡经历了什么过程 ?\n",
     "1. 加载\n",
@@ -78,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
