--- a/数据库/mysql/4-聚簇索引(一级索引)与非聚簇索引(二级索引).ipynb
+++ b/数据库/mysql/4-聚簇索引(一级索引)与非聚簇索引(二级索引).ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "#### 1. 什么叫聚蔟\n",
-    "聚簇指将索引和数据放在一起, 因此:  \n",
-    "* 聚簇索引：将数据存储与索引放到了一块，找到索引也就找到了数据\n",
-    "* 非聚簇索引：将数据存储于索引分开结构，索引结构的叶子节点指向了数据的对应行(innodb中叶子节点给出聚簇索引的值) \n",
+    "\n",
+    "* 聚簇索引：聚簇索引的 B+ 树， 非叶子节点是主键值， 叶子节点是整行数据。 \n",
+    "* 非聚簇索引：将数据存储与索引分开结构，索引结构的叶子节点指向了数据的对应行(innodb中叶子节点给出聚簇索引的值) \n",
     "\n",
     "#### 2. 聚簇索引与主键   \n",
     "主键在 mysql 中是很重要的. \n",
@@ -30,25 +30,36 @@
     "  UUID 作为主键, 导致相邻的聚簇索引值生成在不同的叶子节点. 因此在调入一个节点的聚簇索引数据时, 会造成严重的缺页. \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### explain 常用的列  \n",
+    "1. possible_keys: 潜在的索引\n",
+    "2. key : 本次查询使用到的索引  \n",
+    "3. row : 本次查询结果的预估行数\n",
+    "4. extra ： 显示额外信息， 比如使用 oroder by 查询时， 会显示 file sort"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
