--- a/java-垃圾回收/深入理解Java虚拟机/7-虚拟机类加载机制.ipynb
+++ b/java-垃圾回收/深入理解Java虚拟机/7-虚拟机类加载机制.ipynb
@@ -132,8 +132,96 @@
     "}\n",
     "```\n",
     "\n",
-    "#### 3. 子类加载器可以访问 parent 类加载加载的类，parent 类加载器加载的类不能访问子类加载器加载的类  \n",
-    "[https://blog.csdn.net/qq_20846769/article/details/100026116?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162480761116780271595492%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&request_id=162480761116780271595492&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_v2~rank_v29-1-100026116.first_rank_v2_pc_rank_v29&utm_term=classloader%E4%B8%8E%E5%91%BD%E5%90%8D%E7%A9%BA%E9%97%B4&spm=1018.2226.3001.4187](https://blog.csdn.net/qq_20846769/article/details/100026116?ops_request_misc=%257B%2522request%255Fid%2522%253A%2522162480761116780271595492%2522%252C%2522scm%2522%253A%252220140713.130102334.pc%255Fall.%2522%257D&request_id=162480761116780271595492&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_v2~rank_v29-1-100026116.first_rank_v2_pc_rank_v29&utm_term=classloader%E4%B8%8E%E5%91%BD%E5%90%8D%E7%A9%BA%E9%97%B4&spm=1018.2226.3001.4187)\n",
+    "#### 3. 子类加载器可以访问 parent 类加载加载的类，parent 类加载器加载的类不能访问子类加载器加载的类     \n",
+    "首先记住一个事实, 在用代码进行验证. 我们知道, 被装载的类由`类加载器对象`和`类全名`共同唯一标识, 换种说法就是, jvm所有加载的类, 被其类加载器分隔到不同的命名空间, 每个类加载器对象都有自己的命名空间, 子 classLoader 对象命名空间可以访问 parent classLoader 对象命名空间中的类, 反过来 parent 不能访问子 classLoader 对象命名空间中的类.   \n",
+    "* 先让 MyClass1 由 AppClassLoader 加载, MyClass2 由自定义类加载器加载. 然后在 MyClass2 构造器中调用 `new MyClass1()`, 会报错, 表示 parent 类加载器加载的类找不到子 classLoader 加载的类. 报错如下:  \n",
+    "\n",
+    "```shell\n",
+    "自定义findClass被调用...\n",
+    "MyTest2 classLoader is: ClassLoaderTest@119d7047\n",
+    "\n",
+    "MyTest1 classLoader is: sun.misc.Launcher$AppClassLoader@18b4aac2\n",
+    "Exception in thread \"main\" java.lang.NoClassDefFoundError: MyTest2\n",
+    "\tat MyTest1.<init>(MyTest1.java:5)\n",
+    "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)\n",
+    "\tat sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)\n",
+    "\tat sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)\n",
+    "\tat java.lang.reflect.Constructor.newInstance(Constructor.java:423)\n",
+    "\tat java.lang.Class.newInstance(Class.java:442)\n",
+    "\tat ClassLoaderTest.main(ClassLoaderTest.java:37)\n",
+    "Caused by: java.lang.ClassNotFoundException: MyTest2\n",
+    "\tat java.net.URLClassLoader.findClass(URLClassLoader.java:382)\n",
+    "\tat java.lang.ClassLoader.loadClass(ClassLoader.java:418)\n",
+    "\tat sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:355)\n",
+    "\tat java.lang.ClassLoader.loadClass(ClassLoader.java:351)\n",
+    "\t... 7 more\n",
+    "```\n",
+    "\n",
+    "\n",
+    "* 实例代码如下:   \n",
+    "\n",
+    "```java\n",
+    "// MyTest1.java\n",
+    "public class MyTest1 {\n",
+    "    public MyTest1() {\n",
+    "        // 让 MyTest1 由 AppClassLoader 加载\n",
+    "        System.out.println(\"MyTest1 classLoader is: \" + this.getClass().getClassLoader());\n",
+    "        new MyTest2();  //  parent 类加载器加载的 MyTest1 调用子 classLoader 加载的 MyTest2\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// MyTest2.java\n",
+    "public class MyTest2 {\n",
+    "    // 让 MyTest2 由自定义加载器加载\n",
+    "    public MyTest2() {\n",
+    "        System.out.println(\"MyTest2 classLoader is: \" + this.getClass().getClassLoader());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// ClassLoaderTest.java\n",
+    "public class ClassLoaderTest extends ClassLoader {\n",
+    "    public String baseUrl;\n",
+    "\n",
+    "    // findClass() 方法只有在 AppClassLoader 找不到时才调用\n",
+    "    // 所以要想自定义类加载器生效, class 文件不能放在 classPath 下\n",
+    "    @Override\n",
+    "    public Class<?> findClass(String className) {\n",
+    "        System.out.println(\"自定义findClass被调用...\");\n",
+    "        String path = baseUrl + className.replace(\".\", \"\\\\\") + \".class\";\n",
+    "        try {\n",
+    "            InputStream is = new FileInputStream(path);\n",
+    "            byte data[] = new byte[is.available()];\n",
+    "            is.read(data);\n",
+    "            return defineClass(className, data, 0, data.length);\n",
+    "        } catch (IOException ignored) {}\n",
+    "        return null;\n",
+    "    }\n",
+    "\n",
+    "    private void setPath(String baseUrl) {\n",
+    "        this.baseUrl = baseUrl;\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "    public static void main(String[] args) throws Exception {\n",
+    "        ClassLoaderTest loader2 = new ClassLoaderTest();\n",
+    "        loader2.setPath(\"/Users/liujie02/IdeaProjects/Codes/spring-boot-demo/target/myTest/\");\n",
+    "        Class<?> c2 = loader2.loadClass(\"MyTest2\");\n",
+    "        Object o2 = c2.newInstance();\n",
+    "        System.out.println();\n",
+    "\n",
+    "        ClassLoaderTest loader1 = new ClassLoaderTest();\n",
+    "        loader1.setPath(\".\");//设置自定义类加载器的加载路径\n",
+    "        //被类加载器加载后，得到Class对象\n",
+    "        Class<?> c1 = loader1.loadClass(\"MyTest1\");\n",
+    "        Object o1 = c1.newInstance();//实例化MyTest1\n",
+    "        System.out.println();\n",
+    "\n",
+    "\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
     "\n",
     "#### 4. Thread 类中的 contextClassLoader\n",
     "```java\n",
@@ -151,84 +239,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### 一. Java类加载步骤\n",
-    "#### (1) Java加载.class文件后到类生成,消亡经历了什么过程 ?\n",
-    "1. 加载\n",
-    "2. 验证 : 验证.class文件中的内容是否符合jvm虚拟机规范  \n",
-    "   **准备** : 开辟内存空间来存储这个类和其类变量(就是内部的static变量), 为对象的成员变量赋\"0\"值  \n",
-    "   解析\n",
-    "3. **初始化** : \n",
-    "    1. 如果该类有父类, 先加载, 验证, 解析父类\n",
-    "    2. 再对成员变量赋代码这种声明的真正的值  \n",
-    "4. 使用\n",
-    "5. 卸载\n",
-    "\n",
-    "#### (2) 什么时候会加载.class文件\n",
-    "当使用到某个类时, 类加载器会对.class文件进行加载,验证,准备,解析,初始化,使用\n",
-    "\n",
-    "\n",
-    "### 二. 类加载器和双亲委派机制\n",
-    "\n",
-    "#### 2.1 Java中的类加载器分类(依据.class文件的位置不同划分)\n",
-    "1. BootStrap加载器  \n",
-    "   负责加载`$JAVA_HOME/lib`目录下的jar包, 或通过`-Xbootclasspath`指定路径下的jar包\n",
-    "\n",
-    "2. Extension加载器   \n",
-    "   负责加载`$JAVA_HOME/lib/ext`目录下的jar包\n",
-    "\n",
-    "3. Application加载器   \n",
-    "   加载`$classpath`里的类, 直到applicaiton加载器, 才是加载自己写的代码\n",
-    "   \n",
-    "4. 自定义类加载器  \n",
-    "   \n",
-    "#### 2.2 类加载器的双亲委派机制\n",
-    "1. Java类加载器时层级结构   \n",
-    "   如上所述, java的类加载器时分层的, 形成了自顶向下的亲子结构. \n",
-    "   <img src=\"img/classloader.png\" width=\"20%\">\n",
-    "   \n",
-    "2. 类加载器的双亲委派机制  \n",
-    "    * 每层的类加载器都会优先让父一级的类加载器加载.如果父一级的加载器找不到.class文件, 再由自己加载.  \n",
-    "    * 双亲委派机制, 并不是强制性要求, 而是jvm设计者推荐的一种类加载方式. 这种做法的好处是, 无论是哪个类加载器加载的.class文件, 最终都会被指派给同一个祖先类加载器加载    \n",
-    "     \n",
-    "3. JVM在搜索类的时候，又是如何判定两个class是相同的呢？  \n",
-    "两个类的`类名`和`类加载器`都一样时, jvm才判定这事同一个类\n",
-    "\n",
-    "4. 线程的 `context class loader` 和 普通的`类 classloader` 有什么不同\n",
-    "```java\n",
-    "Thread.currentThread().getContextClassLoader(); - 线程的上下文类加载器\n",
-    "this.getClass().getClassLoader();               - 类的类加载器\n",
-    "```\n",
-    "有一个规则 : 每个类都是用自己的 classLoader 去加载其他类. 假若 ClassA.class 引用了 ClassB.class, 那么 ClassB 需要在 ClassA 的 classLoader 的 classpath 下; `线程上下文类加载器` 是当前线程的 classLoader. 如果一个对象由 classLoaderC 创建传给了 classLoaderD 拥有的线程下使用, 则该对象要想使用自己的 classLoader 加载不到的资源时, 就要使用 `Thread.currentThread().getContextClassLoader()` 加载\n",
-    "   \n",
-    "     \n",
-    "5. spark 中加载 \"hive-site.xml\" 的方式\n",
-    "```scala\n",
-    "Option(Thread.currentThread().getContextClassLoader).getOrElse(getSparkClassLoader)\n",
-    "def getSparkClassLoader: ClassLoader = getClass.getClassLoader\n",
-    "```"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
